# ComfyUI-FBnodes

./: .gitignore  README.md  __init__.py  node_replacements.py  pyproject.toml  requirements.txt
example_workflows/: Lora_Tester.json  VACE_Stitcher.json
js/: better_image_loader.js  crop_plus.js  drag_crop.js  drag_crop_plus.js  file_browser.js  latent_preview.js  load_audio.js  load_image.js  load_models_plus.js  load_video.js  lora_list_plus.js  ltx_review.js  path_browser.js  repath_util.js  save_image_plus.js  save_video_plus.js  show_text_plus.js  vace_stitcher.js  vace_transition_builder.js  video_metadata.js
nodes/: __init__.py  apply_lora.py  better_image_loader.py  crop_image.py  drag_crop.py  latent_preview.py  load_audio.py  load_image.py  load_models_plus.py  load_video.py  lora_list.py  ltx_review.py  path_browser.py  prompt_apply_lora.py  prompt_batcher.py  save_image.py  save_video.py  save_video_h26x.py  show_text.py  switch_any.py  vace_clip_joiner.py  vace_stitcher.py  vace_transition_builder.py
py/: lora_utils.py  repath_util.py
